<resources>
    <string name="app_name">Expenses</string>
    <string name="expenses">Expenses</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="statistics">Statistics</string>
    <string name="WHICH_FRAGMENT">WHICH_FRAGMENT</string>
    <string name="EXPENSES_FRAGMENT">EXPENSES_FRAGMENT</string>
    <string name="CONVERTER_FRAGMENT">CONVERTER_FRAGMENT</string>
    <string name="STATS_FRAGMENT">STATS_FRAGMENT</string>
    <string name="expensesLabel">Expenses:</string>
    <string name="incomeLabel">Income:</string>
    <string name="balanceLabel">Balance:</string>
    <string name="expense_label">Expense</string>
    <string name="dateHolder">--/--/----</string>
    <string name="amountHolder">0.00</string>
    <string name="pick_the_date">Pick the date</string>
    <string name="add_the_amount">Add the amount</string>
    <string name="income_label">income</string>
    <string name="category">Category</string>
    <string name="TYPE_EXPENSE">EXPENSE</string>
    <string name="TYPE_INCOME">INCOME</string>
    <string name="ITEM_TYPE">ITEM_TYPE</string>
    <string name="preference_file_key">qa.edu.qu.cmps312.expenses.PREFERENCE_FILE_KEY</string>
    <string name="camera_toast_message">There is no camera application to launch</string>
    <string name="DATA">data</string>
    <string name="done">Done</string>
    <string name="expenseErrDialogTitle">Cannot add expense</string>
    <string name="expenseErrDialogMsg">Unable to add expense when there is no income\nPlease add income first</string>
    <string name="ok">Ok</string>
    <string name="INCOME_SUM">INCOME_SUM</string>
    <string name="BALANCE">BALANCE</string>
    <string name="expenseGreaterErrTitle">Expense amount error</string>
    <string name="expenseGreaterErrMsg">Expense amount is greater than balance</string>
    <string name="categoryErrDialogTitle">No category selected</string>
    <string name="categoryErrDialogMsg">Please select a category</string>
    <string name="noDateDialogTitle">No date selected</string>
    <string name="noDateDialogMsg">Please choose the date</string>
    <string name="amountZeroTitle">No amount entered</string>
    <string name="amountZeroMsg">Please enter valid amount</string>

    <string-array name="income_categories">
        <item>Please select a category</item>
        <item>Salary</item>
        <item>Business</item>
        <item>Rental</item>
    </string-array>

    <string-array name="expense_categories">
        <item>Please select a category</item>
        <item>Me</item>
        <item>Car</item>
        <item>Entertainment</item>
        <item>Restaurant</item>
        <item>Home</item>
        <item>Grocery</item>
        <item>Phone</item>
    </string-array>
</resources>
