<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oceanBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/ten_dp">

        <Button
            android:id="@+id/unclickableIncomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/lightGrey"
            android:clickable="false"
            android:enabled="false"
            android:paddingLeft="@dimen/thirty_dp"
            android:paddingRight="@dimen/thirty_dp"
            android:text="@string/income_label" />

        <Button
            android:id="@+id/unclickableExpenseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:clickable="false"
            android:paddingLeft="@dimen/thirty_dp"
            android:paddingRight="@dimen/thirty_dp"
            android:text="@string/expense_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/ten_dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/dateTextv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/dateHolder"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amountTextv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/amountHolder"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/ten_dp"
        android:weightSum="2">

        <Button
            android:id="@+id/pickDateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_weight="1"
            android:background="@color/btn_color"
            android:gravity="center_horizontal|center_vertical"
            android:onClick=""
            android:text="@string/pick_the_date"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_sp" />

        <Button
            android:id="@+id/addAmountBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_color"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_the_amount"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_sp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        style="@style/textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/twenty_sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/recurringSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recurring? "
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/oceanBlue"
            android:src="@drawable/camicon" />

        <!--<ImageButton-->
        <!--android:id="@+id/addLocationBtn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/oceanBlue"-->
        <!--android:src="@drawable/locationicon" />-->

    </LinearLayout>

    <ImageView
        android:id="@+id/imageV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/addItemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />


</LinearLayout>