<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oceanBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginBottom="@dimen/thirty_dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_dp"
            android:layout_weight="1"
            android:background="@drawable/contact_icon"
            android:scaleX="0.35"
            android:scaleY="0.9" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:src="@drawable/header_logo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_dp"
            android:layout_weight="1"
            android:background="@drawable/setting_icon"
            android:scaleX="0.35"
            android:scaleY="0.9" />

    </LinearLayout>

    <Button
        android:textAllCaps="false"
        android:id="@+id/expenses_btn"
        android:layout_width="@dimen/three_hundred_dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        android:background="@color/btn_color"
        android:fontFamily="sans-serif"
        android:text="@string/expenses"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/converter_btn"
        android:layout_width="@dimen/three_hundred_dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@color/btn_color"
        android:fontFamily="sans-serif"
        android:text="@string/currency_converter"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/stats_btn"
        android:layout_width="@dimen/three_hundred_dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@color/btn_color"
        android:fontFamily="sans-serif"
        android:text="@string/statistics"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

</LinearLayout>